[project]
name = "dvm"
version = "0.2.0"
description = "dvm is a small Python CLI that lets you back up Docker volumes including permissions & metadata, upload them to a configurable transfer.sh-compatible endpoint, and restore them on another host."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.19.0",
]

[project.scripts]
dvm = "main:cli"

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
